<resources>
    <string name="app_name">DK-CAMP-MIRROR</string>
    <string name="om_lidt_f_r_ndu_det_hele_n_serveret">OM LIDT FÅR\nDU DET HELE\n SERVERET</string>
    <string name="velkommen_ntil_masser_af_n_nye_fordele_n_og_rabatter">VELKOMMEN\nTIL MASSER AF\n
        NYE FORDELE\n OG RABATTER
    </string>
    <string name="vis_fordele">VIS FORDELE</string>
    <string name="start">Start</string>
    <string name="tilmeld">TILMELD</string>
    <string name="e_mail">E-mail</string>
    <string name="adgangskode">Adgangskode</string>
    <string name="glemt_kode">GLEMT KODE?</string>
    <string name="log_in">LOG IN</string>
    <string name="tilmelding">TILMELDING</string>
    <string name="pladser_t_t_p">PLADSER TÆT PÅ</string>
    <string name="min_profil">MIN PROFIL</string>
    <string name="camping_id">CAMPING ID</string>
    <string name="fordele">FORDELE</string>
    <string name="t_t_p">TÆT PÅ</string>
    <string name="spil_og_vind">SPIL OG VIND</string>
    <string name="menu">MENU</string>
    <string name="rabatter">RABATTER</string>
    <string name="oplevelser">OPLEVELSER</string>
    <string name="bil_vogn">BIL VOGN</string>
    <string name="jensens_b_fhus">JENSENS BØFHUS</string>
    <string
        name="ria_sus_dolorest_eratibu_stiatur_aut_ad_nquae_nonsequae_corit_et_quatis_ad_quinda_si_bl">
        <![CDATA[Ria sus dolorest eratibu stiatur aut ad\nquae nonsequae corit et quatis ad quinda si bl. >>]]></string>
    <string name="f_rup_sommerland">FÅRUP SOMMERLAND</string>
    <string
        name="ria_sus_dolorest_eratibad_quae_nonsequae_corit_net_quat_omnis_ad_qui_audanda_si_bl">
        <![CDATA[Ria sus dolorest eratibad quae nonsequae corit\net quat omnis ad qui audanda si bl. >>]]></string>
    <string name="ria_sus_dolore">Ria sus dolorest eratibu stiatur aut ad quae\nnonsequae corit et
        quat omnis ad qui auda si blam\nressunt pratur mollent, tore volorum et magnent\nimporit
        anihillibus etur acestrum, sed que vi.
    </string>
    <string name="spil_gratis_og_vind">SPIL GRATIS OG VIND!</string>
    <string name="et_helt">- et helt års forbrug af kaffe, gratis camping\neller nogle af de mange
        sjove gavekort.\nVi finder nye vindere hver uge!
    </string>
    <string name="spar_25_p_menuen">SPAR 25% PÅ MENUEN</string>
    <string name="bestil_bord">BESTIL BORD</string>
    <string name="f_rste_nat">Første nat gratis\n5 camping rabatter\n100+ oplevelser\nMedlem af
        FDM\nKonkurrencer
    </string>
    <string name="v_rsgo">VÆRSGO’</string>
    <string name="velkommen_ntil_masser_af_nnye_fordele_nog_rabatter">VELKOMMEN\nTIL MASSER AF\nNYE
        FORDELE\nOG RABATTER
    </string>
    <string name="upload_nfoto">UPLOAD\nFOTO</string>
    <string name="navin">NAVIN</string>
    <string name="adresse">ADRESSE</string>
    <string name="postnr_by">POSTNR./BY</string>
    <string name="mobil">MOBIL</string>
    <string name="e_mailUpper">E-MAIL</string>
    <string name="f_dselsdag">FØDSELSDAG</string>
    <string name="familie">FAMILIE</string>
    <string name="uden_b_rn">UDEN BØRN</string>
    <string name="single">SINGLE</string>
    <string name="senior">SENIOR</string>
    <string name="camping_erfaring">CAMPING ERFARING</string>
    <string name="ingen">INGEN</string>
    <string name="ja_tak_send_nyheder_og_tilbud">Ja tak, send nyheder og tilbud</string>
    <string name="_40_r">40 ÅR+</string>
    <string name="ndringer">ÆNDRINGER</string>
    <string name="ok">Ok</string>
    <string name="Log_Ud">LOG UD</string>
    <string name="done">Done</string>
    <string name="mine_interesser">MINE INTERESSER</string>
    <string name="mine_ferietyper">MINE FERIETYPER</string>
    <string name="din_digitale_legimation_til_masser_af_fordele_ni_dk_camping_id_fordelsklubben">Din
        digitale legimation til masser af fordele\ni DK-CAMPING:ID Fordelsklubben.
    </string>
    <string name="er_du_sikker">Er du sikker?</string>
    <string name="annullere">ANNULLERE</string>
    <string name="log_ud">LOG UD</string>
    <string name="klik_og_find_vej">KLIK OG FIND VEJ</string>
    <string
        name="her_kan_du_se_alle_vores_campingpladser_og_nfinde_vej_til_den_naermeste_den_mindste_den_nhyggeligste_eller_lige_hvad_i_dromer_om_god_ntur">
        Her kan du se alle vores campingpladser og\nfinde vej til den naermeste, den mindste,
        den\nhyggeligste ...eller lige hvad I dromer om. God\ntur.
    </string>
    <string name="find_campingplads_taet_pa_n_dig">FIND CAMPINGPLADS TAET PA\nDIG</string>
    <string name="find_dk_stellplatze_taet_pa_ndig">FIND DK-STELLPLATZE TAET PA\nDIG</string>
    <string name="placering_service_er_deaktivere">Placering service er deaktivere</string>
    <string name="du_bor_aktivere_hoj_nojagtighed_nplacering_tilstand">Du bor aktivere hoj
        nojagtighed\nplacering tilstand
    </string>
    <string name="ja">JA</string>
    <string name="brug">BRUG KUN VED CHECK IN</string>

</resources>
