<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_log_in"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.smedialink.abakarmagomedov.dk_camp_mirror.login.LogInActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBarSize"
        android:title=""
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolBarInActivityLog"
        android:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/ToolbarTextAppearens"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/toolBarSize">
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/grey"
            app:riv_mutate_background="true"
            app:riv_corner_radius_top_left="@dimen/cornerRadius"
            android:id="@+id/roundedImageView"
            android:layout_weight="6"/>

        <Button
            style="@style/BlueButtons"
            android:text="@string/log_in"
            android:textSize="@dimen/text_size_in_activity_log_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/buttonlogInActivityLogiN"
            android:layout_marginTop="4dp"
            android:layout_weight="1"/>

    </LinearLayout>


    <include android:id="@+id/logo"
             layout="@layout/logo_layout"
             android:layout_below="@+id/toolBarInActivityLog"
             android:layout_width="@dimen/logo_width"
             android:layout_height="@dimen/logo_height"
             android:layout_centerHorizontal="true"/>

    <EditText
        style="@style/EditTextStyle"
        android:textSize="@dimen/size_of_text_in_activity_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:background="@drawable/border_for_edittext"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/editText"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_of_text_in_activity_profil"
        android:hint="@string/adgangskode"
        android:ems="10"
        android:layout_below="@+id/editText"
        android:layout_marginTop="14dp"
        android:id="@+id/editText2" />

    <TextView
        style="@style/RippleTextView"
        android:text="@string/glemt_kode"
        android:textSize="@dimen/size_of_text_in_activity_profil"
        android:textColor="@color/white"
        android:textStyle="bold|normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/text_forget_password" />



</RelativeLayout>
