<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smedialink.abakarmagomedov.dk_camp_mirror.StartActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_start"
        app:riv_corner_radius_top_left="@dimen/cornerRadius"
        android:scaleType="centerCrop"/>

    <TextView
        android:text="@string/velkommen_ntil_masser_af_nnye_fordele_nog_rabatter"
        android:textColor="@color/white"
        android:textStyle="bold|normal"
        android:textSize="@dimen/size_of_text"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3" />

    <TextView
        style="@style/RippleTextView"
        android:text="@string/vis_fordele"
        android:textSize="@dimen/smallTextActivityStart"
        android:textStyle="bold|normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/text_fordele"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/BlueButtons"
        android:text="@string/start"
        android:layout_width="@dimen/width_of_button_in_activity_start"
        android:layout_height="@dimen/height_of_button_in_activity_start"
        android:textSize="@dimen/button_text_size_in_start_activity"
        android:id="@+id/buttonStartInActivityStart"
        android:layout_above="@+id/text_fordele"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <include android:id="@+id/logo"
             layout="@layout/logo_layout"
             android:layout_width="@dimen/logo_width"
             android:layout_height="@dimen/logo_height"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"/>

</RelativeLayout>
