<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_choice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smedialink.abakarmagomedov.dk_camp_mirror.ChoiceActivity">


    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/background_log_in"
        android:scaleType="centerCrop"
        app:riv_corner_radius_top_left="@dimen/cornerRadius" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/toolBarInActivityChoice"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBarInActivityChoice"
        android:layout_centerHorizontal="true">
        <include layout="@layout/logo_layout"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            style="@style/BlueButtons"
            android:layout_marginBottom="5dp"
            android:text="@string/log_in"
            android:alpha="0.50"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/buttonlogIn" />

        <Button
            style="@style/BlueButtons"
            android:text="@string/tilmelding"
            android:alpha="0.50"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/buttontilmelding" />

        <Button
            style="@style/BlueButtons"
            android:text="@string/pladser_t_t_p"
            android:alpha="0.50"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/buttonplasder" />
    </LinearLayout>


</RelativeLayout>
